H3CIPMSJAVA-20180830/src/objects/EngineerOnSiteInfo__c.object
<CustomObject>
    <fields>
        <fullName>ASCEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASCEngineer</label>
        <referenceTo>ASCEngineer__c</referenceTo>
        <relationshipLabel>EngineerOnSiteInfo</relationshipLabel>
        <relationshipName>EngineerOnSiteInfoASCEngineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EngineerIDCard__c</fullName>
        <formula>ASCEngineer__r.engineerIDNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EngineerIDCard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineerPhone__c</fullName>
        <formula>ASCEngineer__r.engineerPhone__c</formula>
        <label>EngineerPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workorder__c</fullName>
        <label>workorder</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>EngineerOnSiteInfo</relationshipLabel>
        <relationshipName>EngineerOnSiteInfoworkorder</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EngineerOnSiteInfo</label>
    <nameField>
        <displayFormat>EOS-{000000000}</displayFormat>
        <label>OnSiteNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>